--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,3 @@
 # About
 
-This is the about page! This page is shown on the navbar.
+This is documentation for the components used in the Bubblegum project. 
