Added license + basic template content

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,27 @@
 # Introduction
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+Welcome to Bubblegum UI! This is basic documentation to help organize the components used to build the [Project Bubblegum](https://github.com/tayv/project-bubblegum) template. You can also use it as a starting point for your own project.
 
-## What is Nextra?
+## What is Project Bubblegum?
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+### Part 1: The project
 
-## Documentation
+The Project Bubblegum template is a work-in-progress proof-of-concept for an interactive Markdown document builder. 
+It uses the components documented here and is built using Next.js 13 and TypeScript.
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+### Part 2: Bubblegum UI components
+
+This is the collection of controlled React components with basic styling that's documented here. They are designed to be used with Tailwind CSS and Radix UI primitives.
+
+
+## Tech stack
+
+- Next.js 13
+- Tailwind CSS 
+- TypeScript
+- React Hook Form (For controlled components)
+- Radix UI primitives (For accessibility)
+
+## Licensing
+
+- UI components on this site are availible under the [MIT License](https://mit-license.org/) (Free for both personal and commercial use without attribution).
