--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,3 @@
 # About
 
-This is documentation for the components used in the Bubblegum project. 
+This sites documents components used in the Bubblegum project. 
