--- a/pages/forms/primitives/radiogroup.mdx
+++ b/pages/forms/primitives/radiogroup.mdx
@@ -2,7 +2,7 @@ import EmbedIframe from '/components/EmbedIframe'
 import { Callout } from 'nextra-theme-docs'
 import Image from 'next/image'
 import { Tab, Tabs } from 'nextra-theme-docs'
-import { OptionTable } from '/components/Table/table'
+import { OptionTable } from '/components/Table/index'
  
 <Callout emoji="🚧">
   **Under Construction** This component is a work-in-progress.
