Refactored sidenav and folder structure

--- a/pages/formDatePick.mdx
+++ b/pages/formDatePick.mdx
@@ -5,7 +5,7 @@ import { Callout } from 'nextra-theme-docs'
   **Under Construction** This component is a work-in-progress.
 </Callout>
 
-# Paragraph
+# Date Pick
 
 ## Current state
 
