Added step to Radio Group page

--- a/pages/formRadioGroup.mdx
+++ b/pages/formRadioGroup.mdx
@@ -83,6 +83,10 @@ Wrap with [Field component](../formControl/formFieldField) to add control via Re
 </Field>
 ```
 
+### Setup `defaultValues` and `zodSchema` in `Form`
+
+Details in [Form component](../formControl/form)
+
 </Steps>
 
 ### Component API
