Added content to steps and intro

--- a/pages/formCheckbox.mdx
+++ b/pages/formCheckbox.mdx
@@ -45,6 +45,10 @@ TBD
 npm install @radix-ui/react-checkbox
 ```
 
+### Create component
+
+Copy the code from the sandbox above and paste it into a new file (e.g. `Checkbox.tsx`)
+
 ### Make it controlled
 
 Wrap with [Field component](../formControl/formField) to add control via React Hook Form:
