--- a/pages/formDatePick.mdx
+++ b/pages/formDatePick.mdx
@@ -45,6 +45,10 @@ TBD
 npm install date-fns
 ```
 It's used for date formatting.
+
+### Create component
+
+Copy the code from the sandbox above and paste it into a new file (e.g. `DatePick.tsx`)
  
 ### Add child components
  
