--- a/pages/formRadioGroup.mdx
+++ b/pages/formRadioGroup.mdx
@@ -59,6 +59,10 @@ The Radio Group's used to select a single option from a list. It's built around 
 npm install @radix-ui/react-radio-group
 ```
 
+### Create component
+
+Copy the code from the sandbox above and paste it into a new file (e.g. `RadioGroup.tsx`)
+
 ### Make it controlled
 
 Wrap with [Field component](../formControl/formFieldField) to add control via React Hook Form:
