--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,9 @@
+import { Callout } from 'nextra-theme-docs'
+
+<Callout type="info" emoji="ℹ">
+  This is a work-in-progress. Start by checking out [Date Pick](../formDatePick) or [Radio Group](../formRadioGroup). 
+</Callout>
+
 # Introduction
  
 Welcome to Bubblegum UI! This is basic documentation to help organize the components used to build the [Project Bubblegum](https://github.com/tayv/project-bubblegum) template. You can also use it as a starting point for your own project.
@@ -9,10 +15,9 @@ Welcome to Bubblegum UI! This is basic documentation to help organize the compon
 The Project Bubblegum template is a work-in-progress proof-of-concept for an interactive Markdown document builder. 
 It uses the components documented here and is built using Next.js 13 and TypeScript.
 
-### Part 2: Bubblegum UI components
+### Part 2: Bubblegum UI components 
 
-This is the collection of controlled React components with basic styling that's documented here. They are designed to be used with Tailwind CSS and Radix UI primitives.
-
+This is the collection of controlled React components with basic styling that's documented here. They're designed to be used with Tailwind CSS and Radix UI primitives.
 
 ## Tech stack
 
