Added content to Input article

--- a/pages/uiAccordion.mdx
+++ b/pages/uiAccordion.mdx
@@ -83,7 +83,7 @@ Copy the code from the sandbox above and paste it into a new file (e.g. `Accordi
      ['type?', `"single" | "multiple"`, 'Only for accordion groups. Defaults to single. Determines whether one or multiple items can be opened at the same time.'],
      ['defaultValue?', "any", `🚧 WIP. Opens an Accordion by default. Use the value from the items object. Can only have one defaultValue per Accordion group. Note: the any type is used as a workaround for the Radix type and defaultValue prop not working together. Should be string | string[] | undefined.`],
      ['collapsible?', 'boolean', 'Only for accordion groups. When false, prevents closing content by clicking heaader of an open item.'],
-     ['ToggleStyle?', `"standard" | "shrink"`, '🚧 WIP. Intended to change style of toggling an accordion'],
+     ['toggleStyle?', `"standard" | "shrink"`, '🚧 WIP. Intended to change style of toggling an accordion'],
      ['accordionStyle?', `"standard" | "warning" | "tip"`, `Changes the appearance. Defaults to standard if not passed.`]
   ]}
 />
