Added Text Area content

--- a/pages/formInput.mdx
+++ b/pages/formInput.mdx
@@ -49,7 +49,7 @@ Wrap with [Field component](../formControl/formField) to add control via React H
 
 ```jsx copy jsx filename="yourform.tsx"
 <Field
-  name="checkbox"
+  name="example"
   defaultValue={true}
   >
   <Field.GroupLabel>Group label text here:</Field.GroupLabel>
@@ -78,7 +78,7 @@ Details in [Form component](../formControl/form)
   headings={['Optional Prop', 'Type', 'Description']}
   options={[
       ['type', `"text" | "email" | "tel" | "number"`, 'Standard html input types. Defaults to text.'],
-      ['size', `"standard" | "large"`, 'Width of input field. Defaults to standard.'],
+      ['size', `"standard" | "large"`, 'Size of input field. Defaults to standard.'],
   ]}
 />
 
