Refactored RadioGrop to use variant

--- a/pages/formRadioGroup.mdx
+++ b/pages/formRadioGroup.mdx
@@ -81,7 +81,7 @@ Wrap with [Field component](../formControl/formFieldField) to add control via Re
         { value: "wario", label: "Wario", icon: <Zap /> },
         { value: "waluigi", label: "Waluigi", icon: <Skull /> },
       ]}
-      type="buttonLarge"
+      variant="buttonLarge"
     />
   </Field.Control>
 </Field>
@@ -105,7 +105,7 @@ Details in [Form component](../formControl/form)
 <OptionTable
   headings={['Optional Prop', 'Type', 'Description']}
   options={[
-    ['type',  `"standard" | "horizontal" | "button" | "buttonLarge"`, 'Change appearance of Radio Group']
+    ['variant',  `"standard" | "horizontal" | "button" | "buttonLarge"`, 'Change appearance of Radio Group']
   ]}
 />
 
