Fixed build error

--- a/pages/formControl/formWatchField.mdx
+++ b/pages/formControl/formWatchField.mdx
@@ -5,8 +5,10 @@ import { Tab, Tabs } from "nextra-theme-docs"
 import { Steps } from "nextra-theme-docs"
 import { OptionTable } from "/components/Table/index"
 
-;<Callout emoji="🚧">
-  **Under Construction** This component is a work-in-progress.
+<Callout emoji="🚧">
+
+**Under Construction** This component is a work-in-progress.
+
 </Callout>
 
 # Watch Field
